# ai-evals-server

./: .env.example  .gitignore  Procfile  debug.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3b09f7761cb6_initial.py  854fe2fcd1db_add_email_to_memberships.py  a1c2d3e4f5b6_prompt_connection_id.py  a3d4e5f6b7c8_agent_message_tool_calls.py  aa1b2c3d4e5f_plan_limits.py  b4e5f6a7c8d9_agent_use_responses_api.py  c3d4e5f6a7b8_prompt_max_output_tokens.py  c5f6a7b8d9e0_prompt_response_format.py  d5e6f7a8b9c0_playgrounds.py  e1f2a3b4c5d6_add_users_and_user_id.py  f2a3b4c5d6e7_supabase_auth.py  g3b4c5d6e7f8_organizations.py  h4c5d6e7f8a9_prompt_use_responses_api.py  i5d6e7f8a9b0_scorer_connection_id.py  j6e7f8a9b0c1_prompt_versions_scorer_threshold.py  k7f8a9b0c1d2_prompt_model.py  l8a9b0c1d2e3_remove_openai_responses_type.py  m9b0c1d2e3f4_drop_prompt_string.py  n0c1d2e3f4a5_add_created_by_email.py  o1d2e3f4a5b6_add_created_by_email_datasets.py  p2e3f4a5b6c7_add_config_ids_to_runs.py  q3f4a5b6c7d8_unique_membership_user.py  r4a5b6c7d8e9_mcp_support.py  s5b6c7d8e9f0_prompt_mcp_server_id.py  t6c7d8e9f0a1_mcp_server_token.py  u7d8e9f0a1b2_mcp_tool_filter.py  v8e9f0a1b2c3_mcp_oauth.py  w9f0a1b2c3d4_reviews.py  x0a1b2c3d4e5_review_row_prompt_string.py  y1b2c3d4e5f6_agents.py  z2c3d4e5f6a7_agent_chat_summaries.py
src/ai_evals_server/: __init__.py  email.py  main.py
src/ai_evals_server/auth/: dependencies.py  limits.py  utils.py
src/ai_evals_server/database/: __init__.py  migrations.py  session.py
src/ai_evals_server/models/: orm.py  schemas.py
(+15 files in other folders)
